syntax = "proto3";
package proto;
import "TeacherProto.proto";
import "StudentProto.proto";
option java_package = "cyan.simple.protobuf.model.proto";
option java_outer_classname = "ClassProto";

message ClassesMessage {
    repeated ClassMessage classes = 1;
}

message ClassMessage{
    // 班级名称
    string name = 1;
    // 班级人数
    int32 size = 2;
    // 教师列表
    repeated TeacherMessage teachers = 3;
    // 学生列表
    repeated StudentMessage students = 4;
}

